<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottomLiner"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/addItemButton"
            style="?attr/materialButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:enabled="false"
            android:text="@string/put_on_sale" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottomLiner"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtViewHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/fill_the_form_to_add_item_to_auction"
            android:textSize="20sp"
            android:textStyle="bold" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/txtViewHead"
            android:layout_margin="14dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/ItemName"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/DisplayName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/description"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/description"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/original_price"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/originalPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/curent_value"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/currentValue"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/bidding_start_date"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/startDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/bidding_close_date"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/closingDate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/number_of_items"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/numberOfItems"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="Country of Origin"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="Item Packing"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/colorPrimaryDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/spinPacking"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:hint="@string/item_category"
                    app:endIconTint="@color/colorPrimaryDark">

                    <AutoCompleteTextView
                        android:id="@+id/spinType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_marginBottom="12dp"
                    android:text="@string/notSure" />


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/original"
                    app:endIconTint="@color/colorPrimaryDark">

                    <AutoCompleteTextView
                        android:id="@+id/originality"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:editable="false" />

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.checkbox.MaterialCheckBox
                        android:id="@+id/termsCheckBox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="6dp"
                        android:text="@string/termsAndCondition"
                        android:textSize="16sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="fill_horizontal"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addImages"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="0.5"
                        android:paddingHorizontal="5dp"
                        android:text="@string/addImages" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/addDocuments"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="3dp"
                        android:layout_weight="0.5"
                        android:enabled="false"
                        android:paddingHorizontal="5dp"
                        android:text="@string/addDoc" />
                </LinearLayout>

            </LinearLayout>


        </ScrollView>
    </RelativeLayout>

</RelativeLayout>